# qemu

./: meson.build  meson_options.txt  qemu-options.hx
hw/audio/: intel-hda.c  soundhw.c
hw/display/: vga.c
hw/i386/: pc.c  pc_piix.c
hw/i386/xen/: xen-hvm.c
hw/net/: e1000.c  rtl8139.c
hw/pci/: pci.c
hw/xen/: xen-host-pci-device.c  xen-hvm-common.c  xen_pt.c  xen_pt.h  xen_pt_config_init.c  xen_pt_graphics.c  xen_pt_load_rom.c  xen_pt_msi.c
include/hw/xen/: xen.h
include/sysemu/: sysemu.h
include/ui/: console.h
pc-bios/: meson.build
qapi/: ui.json
scripts/: meson-buildoptions.sh
softmmu/: qemu-seccomp.c  vl.c
ui/: console.c  meson.build
